--- a/github_folder/lab_tun/tmux.conf
+++ b/github_folder/lab_tun/tmux.conf
@@ -4,9 +4,9 @@ PWD=`pwd`
 
 kill-session -t $SESS
 new-session -d -s $SESS  "exec docker run -it --rm -v \"$PWD/dist:/dist\" --network $SESS --network-alias=server  -w /dist -h server  $CAP chuang/tunlab bash"
-split-window -v -t $SESS "exec docker run -it --rm -v \"$PWD/dist:/dist\" --network $SESS --network-alias=client1 -w /dist -h client1 $CAP chuang/tunlab bash"
-split-window -v -t $SESS "exec docker run -it --rm -v \"$PWD/dist:/dist\" --network $SESS --network-alias=client2 -w /dist -h client2 $CAP chuang/tunlab bash"
-select-layout -t $SESS even-vertical
+split-window -h -t $SESS "exec docker run -it --rm -v \"$PWD/dist:/dist\" --network $SESS --network-alias=client1 -w /dist -h client1 $CAP chuang/tunlab bash"
+split-window -h -t $SESS "exec docker run -it --rm -v \"$PWD/dist:/dist\" --network $SESS --network-alias=client2 -w /dist -h client2 $CAP chuang/tunlab bash"
+select-layout -t $SESS even-horizontal
 
 #send-keys -t $SESS:0.0 ^L
 #send-keys -t $SESS:0.1 ^L
